kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: outfit-ecommerce-service
spec:
  selector:
    app: outfit-ecommerce-pod
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ExternalName
  externalName: host.docker.internal
  ports:
    - port: 3306
