kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: outfit-ecommerce-ingress
spec:
  rules:
    - host: api.drescapist.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: outfit-ecommerce-service
                port:
                  number: 80
